# Tw_stock_dashboard

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: docker-publish.yml
backend/: requirements.txt
backend/app/: config.py  main.py
backend/app/api/v1/: router.py
backend/app/db/: session.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py
backend/tests/: conftest.py  test_main.py
docker/: Dockerfile  Dockerfile.backend  build.sh  docker-compose.yaml
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/src/components/: HotTopics.css  HotTopics.jsx  LaunchPad.css  LaunchPad.jsx  ToolCard.css  ToolCard.jsx
frontend/src/services/: api.ts
src/tw_stock_dashboard/: logger.py  main.py
src/tw_stock_dashboard/config/: tools.json
src/tw_stock_dashboard/web/: app.py
src/tw_stock_dashboard/web/routers/: hot_topics.py  proxy.py
tests/: test_api.py  test_hot_topics.py  test_main.py
